fdo#64003 - added rmi and snd to insert -> movie & sound list

RMI and SND files were already supported but were missing from the list of
movie & sound menu. Added these in alpha order

	modified:   avmedia/source/viewer/mediawindow.cxx

Change-Id: I3241f1cdd8972fb3da85e8e2bdd26b25f61a53ec